dart/plugin/plugin.h

typedef struct flutter_renderer_alignment_own_alignment_t {
  int32_t __handle;
} flutter_renderer_alignment_own_alignment_t;
typedef struct flutter_renderer_alignment_own_alignment_directional_t {
  int32_t __handle;
} flutter_renderer_alignment_own_alignment_directional_t;
typedef struct flutter_renderer_alignment_borrow_alignment_directional_t {
  int32_t __handle;
} flutter_renderer_alignment_borrow_alignment_directional_t;
typedef struct flutter_renderer_alignment_alignment_geometry_t {
  uint8_t tag;
  union {
    flutter_renderer_alignment_own_alignment_t     alignment;
    flutter_renderer_alignment_own_alignment_directional_t     alignment_directional;
  } val;
} flutter_renderer_alignment_alignment_geometry_t;
typedef struct flutter_renderer_enums_main_axis_alignment_t {
  uint8_t tag;
} flutter_renderer_enums_main_axis_alignment_t;
typedef struct flutter_renderer_enums_text_direction_t {
  uint8_t tag;
} flutter_renderer_enums_text_direction_t;
typedef struct flutter_renderer_enums_vertical_direction_t {
  uint8_t tag;
} flutter_renderer_enums_vertical_direction_t;
typedef struct flutter_renderer_enums_main_axis_size_t {
  uint8_t tag;
} flutter_renderer_enums_main_axis_size_t;
typedef struct flutter_renderer_enums_text_baseline_t {
  uint8_t tag;
} flutter_renderer_enums_text_baseline_t;
typedef struct flutter_renderer_enums_cross_axis_alignment_t {
  uint8_t tag;
} flutter_renderer_enums_cross_axis_alignment_t;
typedef flutter_renderer_alignment_alignment_geometry_t flutter_renderer_widget_alignment_geometry_t;
typedef flutter_renderer_enums_cross_axis_alignment_t flutter_renderer_widget_cross_axis_alignment_t;
typedef flutter_renderer_enums_main_axis_alignment_t flutter_renderer_widget_main_axis_alignment_t;
typedef flutter_renderer_enums_main_axis_size_t flutter_renderer_widget_main_axis_size_t;
typedef flutter_renderer_enums_text_direction_t flutter_renderer_widget_text_direction_t;
typedef flutter_renderer_enums_text_baseline_t flutter_renderer_widget_text_baseline_t;
typedef flutter_renderer_enums_vertical_direction_t flutter_renderer_widget_vertical_direction_t;
typedef struct flutter_renderer_widget_own_row_t {
  int32_t __handle;
} flutter_renderer_widget_own_row_t;
extern void flutter_renderer_alignment_alignment_directional_drop_own(flutter_renderer_alignment_own_alignment_directional_t handle);
extern flutter_renderer_alignment_borrow_alignment_directional_t flutter_renderer_alignment_borrow_alignment_directional(flutter_renderer_alignment_own_alignment_directional_t handle);
void flutter_renderer_alignment_alignment_geometry_free(flutter_renderer_alignment_alignment_geometry_t *ptr);
void flutter_renderer_enums_main_axis_alignment_free(flutter_renderer_enums_main_axis_alignment_t *ptr);
void flutter_renderer_enums_text_direction_free(flutter_renderer_enums_text_direction_t *ptr);
void flutter_renderer_enums_vertical_direction_free(flutter_renderer_enums_vertical_direction_t *ptr);
void flutter_renderer_enums_main_axis_size_free(flutter_renderer_enums_main_axis_size_t *ptr);
void flutter_renderer_enums_text_baseline_free(flutter_renderer_enums_text_baseline_t *ptr);
void flutter_renderer_enums_cross_axis_alignment_free(flutter_renderer_enums_cross_axis_alignment_t *ptr);
void flutter_renderer_widget_alignment_geometry_free(flutter_renderer_widget_alignment_geometry_t *ptr);
void flutter_renderer_widget_cross_axis_alignment_free(flutter_renderer_widget_cross_axis_alignment_t *ptr);
void flutter_renderer_widget_main_axis_alignment_free(flutter_renderer_widget_main_axis_alignment_t *ptr);
void flutter_renderer_widget_main_axis_size_free(flutter_renderer_widget_main_axis_size_t *ptr);
void flutter_renderer_widget_text_direction_free(flutter_renderer_widget_text_direction_t *ptr);
void flutter_renderer_widget_text_baseline_free(flutter_renderer_widget_text_baseline_t *ptr);
void flutter_renderer_widget_vertical_direction_free(flutter_renderer_widget_vertical_direction_t *ptr);
extern void flutter_renderer_widget_row_drop_own(flutter_renderer_widget_own_row_t handle);