dart/src/plugin/plugn.dart


  late final _flutter_renderer_alignment_alignment_directional_drop_ownPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(
                      flutter_renderer_alignment_own_alignment_directional_t)>>(
          'flutter_renderer_alignment_alignment_directional_drop_own');
  late final _flutter_renderer_alignment_alignment_directional_drop_own =
      _flutter_renderer_alignment_alignment_directional_drop_ownPtr.asFunction<
          void Function(
              flutter_renderer_alignment_own_alignment_directional_t)>();

  flutter_renderer_alignment_borrow_alignment_directional_t
      flutter_renderer_alignment_borrow_alignment_directional(
    flutter_renderer_alignment_own_alignment_directional_t handle,
  ) {
    return _flutter_renderer_alignment_borrow_alignment_directional(
      handle,
    );
  }

  late final _flutter_renderer_alignment_borrow_alignment_directionalPtr = _lookup<
          ffi.NativeFunction<
              flutter_renderer_alignment_borrow_alignment_directional_t Function(
                  flutter_renderer_alignment_own_alignment_directional_t)>>(
      'flutter_renderer_alignment_borrow_alignment_directional');
  late final _flutter_renderer_alignment_borrow_alignment_directional =
      _flutter_renderer_alignment_borrow_alignment_directionalPtr.asFunction<
          flutter_renderer_alignment_borrow_alignment_directional_t Function(
              flutter_renderer_alignment_own_alignment_directional_t)>();

  void flutter_renderer_alignment_alignment_geometry_free(
    ffi.Pointer<flutter_renderer_alignment_alignment_geometry_t> ptr,
  ) {
    return _flutter_renderer_alignment_alignment_geometry_free(
      ptr,
    );
  }

  late final _flutter_renderer_alignment_alignment_geometry_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<
                      flutter_renderer_alignment_alignment_geometry_t>)>>(
      'flutter_renderer_alignment_alignment_geometry_free');
  late final _flutter_renderer_alignment_alignment_geometry_free =
      _flutter_renderer_alignment_alignment_geometry_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_alignment_alignment_geometry_t>)>();

  void flutter_renderer_enums_main_axis_alignment_free(
    ffi.Pointer<flutter_renderer_enums_main_axis_alignment_t> ptr,
  ) {
    return _flutter_renderer_enums_main_axis_alignment_free(
      ptr,
    );
  }

  late final _flutter_renderer_enums_main_axis_alignment_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_enums_main_axis_alignment_t>)>>(
      'flutter_renderer_enums_main_axis_alignment_free');
  late final _flutter_renderer_enums_main_axis_alignment_free =
      _flutter_renderer_enums_main_axis_alignment_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_enums_main_axis_alignment_t>)>();

  void flutter_renderer_enums_text_direction_free(
    ffi.Pointer<flutter_renderer_enums_text_direction_t> ptr,
  ) {
    return _flutter_renderer_enums_text_direction_free(
      ptr,
    );
  }

  late final _flutter_renderer_enums_text_direction_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_enums_text_direction_t>)>>(
      'flutter_renderer_enums_text_direction_free');
  late final _flutter_renderer_enums_text_direction_free =
      _flutter_renderer_enums_text_direction_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_enums_text_direction_t>)>();

  void flutter_renderer_enums_vertical_direction_free(
    ffi.Pointer<flutter_renderer_enums_vertical_direction_t> ptr,
  ) {
    return _flutter_renderer_enums_vertical_direction_free(
      ptr,
    );
  }

  late final _flutter_renderer_enums_vertical_direction_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_enums_vertical_direction_t>)>>(
      'flutter_renderer_enums_vertical_direction_free');
  late final _flutter_renderer_enums_vertical_direction_free =
      _flutter_renderer_enums_vertical_direction_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_enums_vertical_direction_t>)>();

  void flutter_renderer_enums_main_axis_size_free(
    ffi.Pointer<flutter_renderer_enums_main_axis_size_t> ptr,
  ) {
    return _flutter_renderer_enums_main_axis_size_free(
      ptr,
    );
  }

  late final _flutter_renderer_enums_main_axis_size_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_enums_main_axis_size_t>)>>(
      'flutter_renderer_enums_main_axis_size_free');
  late final _flutter_renderer_enums_main_axis_size_free =
      _flutter_renderer_enums_main_axis_size_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_enums_main_axis_size_t>)>();

  void flutter_renderer_enums_text_baseline_free(
    ffi.Pointer<flutter_renderer_enums_text_baseline_t> ptr,
  ) {
    return _flutter_renderer_enums_text_baseline_free(
      ptr,
    );
  }

  late final _flutter_renderer_enums_text_baseline_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_enums_text_baseline_t>)>>(
      'flutter_renderer_enums_text_baseline_free');
  late final _flutter_renderer_enums_text_baseline_free =
      _flutter_renderer_enums_text_baseline_freePtr.asFunction<
          void Function(ffi.Pointer<flutter_renderer_enums_text_baseline_t>)>();

  void flutter_renderer_enums_cross_axis_alignment_free(
    ffi.Pointer<flutter_renderer_enums_cross_axis_alignment_t> ptr,
  ) {
    return _flutter_renderer_enums_cross_axis_alignment_free(
      ptr,
    );
  }

  late final _flutter_renderer_enums_cross_axis_alignment_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_enums_cross_axis_alignment_t>)>>(
      'flutter_renderer_enums_cross_axis_alignment_free');
  late final _flutter_renderer_enums_cross_axis_alignment_free =
      _flutter_renderer_enums_cross_axis_alignment_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_enums_cross_axis_alignment_t>)>();

  void flutter_renderer_widget_alignment_geometry_free(
    ffi.Pointer<flutter_renderer_widget_alignment_geometry_t> ptr,
  ) {
    return _flutter_renderer_widget_alignment_geometry_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_alignment_geometry_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_widget_alignment_geometry_t>)>>(
      'flutter_renderer_widget_alignment_geometry_free');
  late final _flutter_renderer_widget_alignment_geometry_free =
      _flutter_renderer_widget_alignment_geometry_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_widget_alignment_geometry_t>)>();

  void flutter_renderer_widget_cross_axis_alignment_free(
    ffi.Pointer<flutter_renderer_widget_cross_axis_alignment_t> ptr,
  ) {
    return _flutter_renderer_widget_cross_axis_alignment_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_cross_axis_alignment_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<
                      flutter_renderer_widget_cross_axis_alignment_t>)>>(
      'flutter_renderer_widget_cross_axis_alignment_free');
  late final _flutter_renderer_widget_cross_axis_alignment_free =
      _flutter_renderer_widget_cross_axis_alignment_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_widget_cross_axis_alignment_t>)>();

  void flutter_renderer_widget_main_axis_alignment_free(
    ffi.Pointer<flutter_renderer_widget_main_axis_alignment_t> ptr,
  ) {
    return _flutter_renderer_widget_main_axis_alignment_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_main_axis_alignment_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_widget_main_axis_alignment_t>)>>(
      'flutter_renderer_widget_main_axis_alignment_free');
  late final _flutter_renderer_widget_main_axis_alignment_free =
      _flutter_renderer_widget_main_axis_alignment_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_widget_main_axis_alignment_t>)>();

  void flutter_renderer_widget_main_axis_size_free(
    ffi.Pointer<flutter_renderer_widget_main_axis_size_t> ptr,
  ) {
    return _flutter_renderer_widget_main_axis_size_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_main_axis_size_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_widget_main_axis_size_t>)>>(
      'flutter_renderer_widget_main_axis_size_free');
  late final _flutter_renderer_widget_main_axis_size_free =
      _flutter_renderer_widget_main_axis_size_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_widget_main_axis_size_t>)>();

  void flutter_renderer_widget_text_direction_free(
    ffi.Pointer<flutter_renderer_widget_text_direction_t> ptr,
  ) {
    return _flutter_renderer_widget_text_direction_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_text_direction_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_widget_text_direction_t>)>>(
      'flutter_renderer_widget_text_direction_free');
  late final _flutter_renderer_widget_text_direction_free =
      _flutter_renderer_widget_text_direction_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_widget_text_direction_t>)>();

  void flutter_renderer_widget_text_baseline_free(
    ffi.Pointer<flutter_renderer_widget_text_baseline_t> ptr,
  ) {
    return _flutter_renderer_widget_text_baseline_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_text_baseline_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_widget_text_baseline_t>)>>(
      'flutter_renderer_widget_text_baseline_free');
  late final _flutter_renderer_widget_text_baseline_free =
      _flutter_renderer_widget_text_baseline_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_widget_text_baseline_t>)>();

  void flutter_renderer_widget_vertical_direction_free(
    ffi.Pointer<flutter_renderer_widget_vertical_direction_t> ptr,
  ) {
    return _flutter_renderer_widget_vertical_direction_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_vertical_direction_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_widget_vertical_direction_t>)>>(
      'flutter_renderer_widget_vertical_direction_free');
  late final _flutter_renderer_widget_vertical_direction_free =
      _flutter_renderer_widget_vertical_direction_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_widget_vertical_direction_t>)>();

  void flutter_renderer_widget_row_drop_own(
    flutter_renderer_widget_own_row_t handle,
  ) {
    return _flutter_renderer_widget_row_drop_own(
      handle,
    );
  }
